--- a/3_Test_DScience.ipynb
+++ b/3_Test_DScience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a0f2e946",
+   "id": "5c76ed82",
    "metadata": {},
    "source": [
     "# Sección 3\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d236f58d",
+   "id": "8bcc9c67",
    "metadata": {},
    "source": [
     "# Caso Ventas de autos y motocicletas\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3314d436",
+   "id": "1912cb3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c4a0bf2",
+   "id": "7635556e",
    "metadata": {},
    "source": [
     "### Extraer el archivo fuente\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "97ef83c9",
+   "id": "c6c0b593",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08bf488",
+   "id": "0a1a1d51",
    "metadata": {},
    "source": [
     "### Overview a la información"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3d240d33",
+   "id": "2f4f6af3",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42cb279f",
+   "id": "b76eb4ef",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0dd76144",
+   "id": "f986c5f6",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b79f8ed",
+   "id": "a0f132c1",
    "metadata": {},
    "source": [
     "# 1- Análisis descriptivo"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fef0a2f3",
+   "id": "f7ed1e4b",
    "metadata": {},
    "source": [
     "### Ver los valores únicos de las columnas de mayor interés"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2557e6dd",
+   "id": "c51baff8",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f21dbb29",
+   "id": "0e86755e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8b375e54",
+   "id": "74ec24ef",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "97f04cd7",
+   "id": "2629346a",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "daad0649",
+   "id": "03473818",
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "64eb9235",
+   "id": "4f281c29",
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "26331829",
+   "id": "1ae1f502",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6fc2c3b",
+   "id": "4cbea72c",
    "metadata": {},
    "source": [
     "### Resumen"
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7825314",
+   "id": "3b70cfba",
    "metadata": {},
    "source": [
     "- Los paises donde mas se venden son **USA, Spain, y France**.\n",
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "4d5ffd86",
+   "id": "e66e08be",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bff03a0f",
+   "id": "321f10be",
    "metadata": {},
    "source": [
     "**Efectivamente, las ventas del 2005 no consideran todo el año, sino solamente hasta el 2nd quarter.**"
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2126afab",
+   "id": "b80a9f57",
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "4bb49b98",
+   "id": "bfaf2e85",
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "3c71e12c",
+   "id": "143d008a",
    "metadata": {},
    "outputs": [
     {
@@ -2338,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "361f8fd1",
+   "id": "587b06b0",
    "metadata": {},
    "outputs": [
     {
@@ -2361,9 +2361,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "325ee9fc",
+   "metadata": {},
+   "source": [
+    "# 3- Segmentación por Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a131e1ac",
+   "metadata": {},
+   "source": [
+    "- La **hipótesis** es que existen grupos de clientes que genera ordenes de compra similares (mix de productos similares). \n",
+    "\n",
+    "- Si esta hipótesis es cierta, cuando un cliente compre un producto de ese mix, puedo ofrecerle otros productos del mix, asi elevar el ticket medio de compra.\n",
+    "\n",
+    "- Let's do it:\n",
+    "\n",
+    "Las dos variables que utilizaremos para construir los clusters deben ser **ORDERNUMBER** y **PRODUCTCODE**, esta última variable está asociado a un producto en la tabla Producto."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97afabf7",
+   "id": "2a9ec60a",
    "metadata": {},
    "outputs": [],
    "source": []
